# TCPClient

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  structs.h  tcpclient.cpp  tcpclient.h
